--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="css/styles.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Cupcake Stop</title>
@@ -10,9 +11,9 @@
   <nav>
     <a href="about.html">About</a>
     <a href="contact.html">Contact Us</a>
-    <a href="index.html">Gallery</a>
+    <a href="index.html">Home</a>
   </nav>
   <hr>
-
+  <h2></h2>
 </body>
 </html>
