Add 3 photos to the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,26 @@
     <a href="index.html">Home</a>
   </nav>
   <hr>
-  <h2></h2>
+  <h2 class="subheading">Welcome to the Gallery!</h2>
+  <p class="subheading">Where we display our favorite cupcakes, all of which are available for order!</p>
+  <hr>
+  <div class="gallery-img">
+    <img src="img/spider-cupcake.jpg" alt="cupcake that looks like a spider">
+    <h3><strong>The Halloween Special</strong></h3>
+    <hr>
+    <p>A pumpkin-flavored spider themed cupcake that will leave your hair standing on end.</p>
+  </div>
+  <div class="gallery-img">
+    <img src="img/leprechaun-cake.jpg" alt="St. Patricks day themed cupcake">
+    <h3><strong>Feeling Lucky?</strong></h3>
+    <hr>
+    <p>Decorative lemon-flavored cupcake with lime-flavored icing and candy on top to satisfy that sweet tooth!</p>
+  </div>
+  <div class="gallery-img">
+    <img src="img/strawberry.jpg" alt="A strawberry themed cupcake">
+    <h3><strong>Strawberry Shortcake</strong></h3>
+    <hr>
+    <p>A true classic, vanilla-flavored cupcake with strawberry cooked in.  As well as strawberry-flavored icing to top it off!</p>
+  </div>
 </body>
 </html>
