Add contact information to contact.html

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,21 @@
 <body>
   <h1>Welcome to The Cupcake Stop!</h1>
   <nav>
-    <a href="about.html">About</a>
     <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
   </nav>
   <hr>
+  <h2 class="subheading">Let us know what you think!</h2>
+  <p class="subheading">We would love to hear from you!</p>
+  <hr>
+  <h3>Email:</h3>
+  <h4>cupcake-stop@gmail.com</h4>
+  <hr>
+  <h3>Phone #:</h3>
+  <h4>123-456-7890</h4>
+  <hr>
+  <h3>See us In-Store!</h3>
+  <h4><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuOcS-YBzOgd9EISqMG964mP8hmh8syBw5nA&usqp=CAU">742 Evergreen Terrace</a></h4>
 
 </body>
 </html>
