Add styles .flashy class

--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
   <title>The Cupcake Stop</title>
 </head>
 <body>
-  <h1>Welcome to The Cupcake Stop!</h1>
+  <h1 class="flashy">Welcome to The Cupcake Stop!</h1>
   <nav>
     <a href="contact.html">Contact Us</a>
     <a href="index.html">Home</a>
