Add best seller to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <a href="gallery.html">Gallery</a>
   </nav>
   <hr>
-
+  <h2 class="subheading">Best Seller!</h2>
+  <p class="subheading">Limited Edition!  Get it while you can!</p>
+  <hr>
+  <div style="margin: 0 auto" class="gallery-img" id="best">
+    <img src="img/spider-cupcake.jpg" alt="cupcake that looks like a spider">
+    <h3><strong><a href="gallery.html">The Halloween Special</a></strong></h3>
+    <hr>
+    <p>A pumpkin-flavored spider themed cupcake that will leave your hair standing on end.</p>
+  </div>
 </body>
 </html>
